--- a/Forschner_Christopher_Assignment05_R.Rmd
+++ b/Forschner_Christopher_Assignment05_R.Rmd
@@ -43,29 +43,30 @@ API Explorer website), please comply to the common secrecy practices discussed i
 tutorial: Treat the API key as a secret token. Your API key should neither appear in the code that you
 are submitting nor in your public GitHub repository.
 
-```{r}
+```{r include=FALSE}
 library(jsonlite)
 library(httr)
 library(tidyverse)
 library(rlist)
 ```
 
-```{r}
+```{r include=FALSE}
 source('ticketmaster_api.R')
 ```
 
 #Interacting with the API - the basics
 (7) Perform a first GET request, that searches for event venues in Germany (countryCode = "DE"). Extract the content from the response object and inspect the resulting list. Describe what you can see.
 ```{r}
+#get first info about the API
 tickets_de <- GET('https://app.ticketmaster.com/discovery/v2/venues', 
                   query=list("apikey"=ticketmaster_key,
                              "countryCode"="DE",
                              "locale"="*",
                              'size'=499)) %>% content
 
-total_pages<-as.numeric(tickets_de$page$totalPages)
-pagesize<-as.numeric(tickets_de$page$size)
-elements<-as.numeric(tickets_de$page$totalElements)
+total_pages<-as.numeric(tickets_de$page$totalPages) #no of total pages
+pagesize<-as.numeric(tickets_de$page$size) #page size
+elements<-as.numeric(tickets_de$page$totalElements) #number of elements
 
 ```
 ```{r}
@@ -96,11 +97,11 @@ varnames=colnames(tickets_df1)
 ```
 
 ```{r}
-tickets_df1 <- map(tickets_de2, as.data.frame) %>%
+tickets_df1 <- map(tickets_de2, as.data.frame) %>% #map them in a list
   map(~ complete(tibble(.x),)) %>% #replaces missing columns with a NA
   bind_rows() %>% 
   select(c('name','name.1','line1','location.longitude','location.latitude','url','postalCode'))%>%
-  rename(city = name.1,
+  rename(city = name.1, #rename columns in a proper name
          address = line1,
          latitude = location.latitude,
          longitude = location.longitude)
@@ -128,9 +129,9 @@ de_length<-as.numeric(length(venueslist_de2))
 #dropped the 26th page, because it caused Problems I could not find a solution for
 
 
-venues_de_df<-data.frame()
+venues_de_df<-data.frame() #create empty data frame
 for (p in 1:de_length){
-  elements<-as.numeric(length(venueslist_de2[[p]]))
+  elements<-as.numeric(length(venueslist_de2[[p]])) #create empty lists for every column in the data frame
   names<-vector("list",elements)
   city<-vector("list",elements)
   postal_Code<-vector("list",elements)
@@ -138,12 +139,13 @@ for (p in 1:de_length){
   latitude<-vector("list",elements)
   longitude<-vector("list",elements)
   address<-vector("list",elements)
-  for(e in 1:elements){
+  
+  for(e in 1:elements){ #check if element of  the list, otherwise NA
     if (venueslist_de2[[p]][[e]]$name %in% venueslist_de2[[p]][[e]]){
       names[e]<-venueslist_de2[[p]][[e]]$name}
     else{names[e]<-NA}
     
-    if (!is.null(venueslist_de2[[p]][[e]]$postalCode)){
+    if (!is.null(venueslist_de2[[p]][[e]]$postalCode)){ 
     postal_Code[e]<-venueslist_de2[[p]][[e]]$postalCode} 
     else{postal_Code[e]<-NA}
     
@@ -168,10 +170,16 @@ for (p in 1:de_length){
     else{address[e]<-NA}
     
   } 
-  venues_de_df2<-data.frame(unlist(names),unlist(postal_Code),unlist(city),unlist(longitude),unlist(latitude),unlist(url),unlist(address))
+  venues_de_df2<-data.frame(unlist(names), #create data frame of the produced lists
+                            unlist(postal_Code),
+                            unlist(city),
+                            unlist(longitude),
+                            unlist(latitude),
+                            unlist(url),
+                            unlist(address))
   venues_de_df<-rbind(venues_de_df,venues_de_df2)
 }
-venues_de_df<-venues_de_df %>%rename(name=unlist.names.,
+venues_de_df<-venues_de_df %>%rename(name=unlist.names., #renaming
          city=unlist.city.,
          postalCode=unlist.postal_Code.,
          adress=unlist.address.,
@@ -179,8 +187,8 @@ venues_de_df<-venues_de_df %>%rename(name=unlist.names.,
          latitude=unlist.latitude.,
          url=unlist.url.)
 
-venues_de_df$latitude<-venues_de_df$latitude  %>% as.numeric()
-venues_de_df$longitude<-venues_de_df$longitude  %>% as.numeric()
+venues_de_df$latitude<-venues_de_df$latitude  %>% as.numeric() #transform latitude and longitude 
+venues_de_df$longitude<-venues_de_df$longitude  %>% as.numeric()#in numerics
 head(venues_de_df)
 ```
 # Visualizing the extracted data
@@ -192,28 +200,36 @@ ggplot(data = venues_de_df) +
   borders("world", "Germany", colour = "black", fill = "grey90") +
   theme_void() +
   coord_quickmap() +
-  geom_point(mapping = aes(x=longitude,y=latitude))+
+  geom_point(mapping = aes(x=longitude,y=latitude))+#adding a scatterplot to the Map
   labs(title = "Event locations across Germany",
        caption = "Source: ticketmaster.com") +
   theme(title = element_text(size=8, face='bold'),
         plot.caption = element_text(face = "italic"))
 ```
+
+
+
+
+
+
+
+
 (11) You will find that some coordinates lie way beyond the German borders and can be assumed to be faulty.
 Set coordinate values to NA where the value of longitude is outside the range (5.866, 15.042) or
 where the value of latitude is outside the range (47.270, 55.059) (these coordinate ranges have
 been derived from the extreme points of Germany as listed on Wikipedia (see here). For extreme points
 of other countries, see here).
 ```{r}
-venues_de_df2<-venues_de_df
+venues_de_df2<-venues_de_df #replace values if they are outside the extrem points
 venues_de_df2$longitude[venues_de_df2$longitude>15.042]<-NA
 venues_de_df2$longitude[venues_de_df2$longitude<5.886]<-NA
 venues_de_df2$latitude[venues_de_df2$latitude>55.059]<-NA
 venues_de_df2$latitude[venues_de_df2$latitude<47.270]<-NA
-venues_de_df2
+head(venues_de_df2)
 
 ```
 ```{r}
-ggplot(data = venues_de_df2) +
+ggplot(data = venues_de_df2) + #new data base
   borders("world", "Germany", colour = "black", fill = "grey90") +
   theme_void() +
   coord_quickmap() +
@@ -267,9 +283,9 @@ ch_length<-as.numeric(length(venueslist_ch2))
 venuesch_df<-data.frame()
 length_ch<-length(venueslist_ch2[[1]])
 venueslist_ch3<-venueslist_ch2[[1]]
-head(venues_df)
 ```
-```{r}
+```{r} 
+#same procedure as in exercise 9
 names<-vector("list",elements_ch)
 city<-vector("list",elements_ch)
 postal_Code<-vector("list",elements_ch)
@@ -277,7 +293,6 @@ url <-vector("list",elements_ch)
 latitude<-vector("list",elements_ch)
 longitude<-vector("list",elements_ch)
 address<-vector("list",elements_ch)
-venueslist_ch3[[1]]
 
 for (i in 1:elements_ch){
 if (venueslist_ch3[[i]]$name %in% venueslist_ch3[[i]]){
@@ -351,6 +366,7 @@ head(venues_ch_df)
 ```
 
 ```{r}
+#same procedure as in exercise 10
 ggplot(data = venues_ch_df) +
   borders("world", "Switzerland", colour = "black", fill = "grey90") +
   theme_void() +
@@ -363,15 +379,16 @@ ggplot(data = venues_ch_df) +
 ```
 
 ```{r}
+#same procedure as in exercise 11
 venues_ch_df2<-venues_ch_df
 venues_ch_df2$longitude[venues_ch_df2$longitude>10.29]<-NA
 venues_ch_df2$longitude[venues_ch_df2$longitude<5.57]<-NA
 venues_ch_df2$latitude[venues_ch_df2$latitude>47.48]<-NA
 venues_ch_df2$latitude[venues_ch_df2$latitude<45.49]<-NA
-venues_ch_df2
+head(venues_ch_df2)
 ```
 ```{r}
-ggplot(data = venues_ch_df2) +
+ggplot(data = venues_ch_df2) + #new database
   borders("world", "Switzerland", colour = "black", fill = "grey90") +
   theme_void() +
   coord_quickmap() +
