--- a/Forschner_Christopher_Assignment05_Python.ipynb
+++ b/Forschner_Christopher_Assignment05_Python.ipynb
@@ -31,13 +31,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 1,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#link to the Github Page\n",
-    "git_link=\"https://github.com/chrisfor97/Assignment05cf.git\""
+    "https://github.com/chrisfor97/Assignment05cf.git"
    ]
   },
   {
