--- a/Forschner_Christopher_Assignment05_R.Rmd
+++ b/Forschner_Christopher_Assignment05_R.Rmd
@@ -1,6 +1,6 @@
 ---
 title: 'Assignment V: GitHub and the ticketmaster.com API'
-author: "Christopher Forschner"
+author: "Christopher Forschner (Student ID:6290771)"
 date: "`r Sys.Date()`"
 output: html_document
 ---
@@ -8,6 +8,8 @@ output: html_document
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 ```
+
+I worked together with Janik Müller and Simon Andres in R and Python.
 
 ## Setting up a new GitHub repository
 
