--- a/Forschner_Christopher_Assignment05_Python.ipynb
+++ b/Forschner_Christopher_Assignment05_Python.ipynb
@@ -1720,7 +1720,7 @@
     }
    ],
    "source": [
-    "#exercise 9 country of choice Switzerland ('CountryCode:FR')\n",
+    "#exercise 9 country of choice Switzerland ('CountryCode:CH')\n",
     "tickets_ch=requests.get('https://app.ticketmaster.com/discovery/v2/venues',\n",
     "                params = {\"apikey\": api_key1, \"countryCode\": \"CH\",'locale':'*'}).json()  \n",
     "vpages_ch=list(range(tickets_ch['page']['totalPages'])) \n",
